[project]
name = "get_paper"
version = "2.1"
description = "文献下载器（NCBI）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ttkbootstrap==0.5.1",
    "lxml>=4.9.0",
    "beautifulsoup4==4.10.0",
    "aiohttp>=3.8.0",
]

[dependency-groups]
dev = [
    "pyinstaller",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
