[project]
name = "get_paper"
version = "2.1"
description = "文献下载器（NCBI）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ttkbootstrap>=1.20.1",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
]

[dependency-groups]
dev = ["pyinstaller==6.*"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
